--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
 
 @layer base {
   :root {
@@ -75,4 +75,8 @@
     color-scheme: dark;
     @apply bg-zinc-900 text-zinc-100;
   }
+}
+
+.text-balance {
+  text-wrap: balance;
 }
